# raphy

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.cargo/: config.toml
client/: Cargo.toml  package.json
client-app/: README.md  package.json  pnpm-lock.yaml
client-app-slint-experimental/: Cargo.toml
client-app-slint-experimental/src/: main.rs
client-app-slint-experimental/ui/: app.slint  setup-page.slint
client-app/src/: App.tsx  style.css
client-app/src-tauri/: Cargo.toml  tauri.conf.json
client-app/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  setup.rs  utils.rs
client-app/src/components/: ConnectionFailureOverlay.tsx
client-app/src/components/main/: ConfigSection.tsx  Console.tsx  ControlButtons.tsx  Header.tsx  ServerStatus.tsx
client-app/src/components/setup/: ConnectionStatus.tsx  ServerList.tsx
client-app/src/contexts/: ConnectionContext.tsx
client-app/src/pages/: MainPage.tsx  SetupPage.tsx
client-app/src/utils/: clientModeStore.ts  server.ts
client/src/: App.tsx  lib.rs  managed.rs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  lib.rs  main.rs
client/src/components/main/: ConfigSection.tsx  ControlButtons.tsx  ServerStatus.tsx
client/src/components/setup/: ConnectionStatus.tsx  NavigationButtons.tsx  ServerList.tsx
client/src/pages/: SetupPage.tsx
client/src/utils/: server.ts
common/: Cargo.toml
common/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: config.rs  error.rs  lib.rs  utils.rs
server/: Cargo.toml
server/src/: base.rs  child.rs  main.rs  network.rs  utils.rs
