[package]
name = "raphy-common"
version = "0.1.0"
edition = "2024"

[dependencies]
console-subscriber = { version = "0.4.1", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
tracing = { version = "0.1.41", optional = true }

[features]
init_logging = ["dep:tracing-subscriber", "dep:console-subscriber", "dep:tracing"]
