[package]
name = "raphy-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
directories = "6.0.0"
fs-err = { version = "3.1.0", features = ["tokio"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tokio = { version = "1.44.0", features = ["process"] }
tracing = "0.1.41"
