[package]
name = "raphy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
auto-launch = "0.5.0"
bincode = "2.0.1"
mdns-sd = "0.13.3"
native-dialog = "0.7.0"
nix = { version = "0.29.0", features = ["process", "signal"] }
raphy-common = { version = "0.1.0", path = "../common", features = ["init_logging", "config"] }
raphy-protocol = { version = "0.1.0", path = "../protocol" }
slab = "0.4.9"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "net", "io-util", "process"] }
tokio-graceful-shutdown = { version = "0.16.0", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
