[package]
name = "raphy-client-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "raphy_client_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raphy-protocol = { version = "0.1.0", path = "../../protocol" }
mdns-sd = "0.13.3"
anyhow = "1.0.97"
native-dialog = "0.7.0"
indexmap = { version = "2.8.0", features = ["serde"] }
raphy-client = { version = "0.1.0", path = "../../client" }
anyhow-tauri = "1.0.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
raphy-common = { version = "0.1.0", path = "../../common", features = ["init_logging"] }
nix = { version = "0.29.0", features = ["process"] }
